# MachineLearning-Basketball-NBA-Draft-Prediction

./: Makefile  ProjectReadme.docx  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: adaboostclassifier_default_tuned.joblib  scaler.joblib  scaler_with_feature_imp.joblib
notebooks/: MachineLearning-week1_ClassificationModel_LogisticRegression.ipynb  MachineLearning-week2_ClassificationModel_RandomForest_Tuned.ipynb  MachineLearning-week2_ExploratoryDataAnalysis(EDA).ipynb  MachineLearning-week3_ClassificationModel_AdaBoost.ipynb  MachineLearning-week3_ClassificationModel_AdaBoost_Tuned.ipynb  MachineLearning-week3_ExploratoryDataAnalysis(EDA).ipynb  Patil_Monali-14370946-week2_EDA.ipynb  Patil_Monali-14370946-week2_RF.ipynb  Patil_Monali-14370946-week2_RF_Tuned.ipynb  Patil_Monali-14370946-week3_AdaBoost.ipynb  Patil_Monali-14370946-week3_AdaBoost_Tuned.ipynb  Patil_Monali-14370946-week3_EDA.ipynb  Patil_Monali-14370946-week3_Test.ipynb
references/: metadata.csv
reports/: EXPERIMENT REPORT - 1.docx  EXPERIMENT REPORT - 2.docx  EXPERIMENT REPORT - 3.docx  Final Report.docx
src/data/: sets.py
src/models/: null.py  performance.py
